added original license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "project",
     "description": "Puppet module for nginx installation",
     "keywords": ["puppet", "nginx"],
+    "license": "Apache-2.0",
     "require": {
     },
     "extra": {
