--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,22 @@ rvm:
   - 2.0.0
 gemfile: .travis/Gemfile
 env:
-  matrix:
-    - PUPPET_GEM_VERSION="~> 2.7.0"
-    - PUPPET_GEM_VERSION="~> 3.0"
+  - PUPPET_VERSION="~> 2.7.0"
+  - PUPPET_VERSION="~> 3.0.0"
+  - PUPPET_VERSION="~> 3.1.0"
+  - PUPPET_VERSION="~> 3.2.0"
+  - PUPPET_VERSION="~> 3.3.0"
 matrix:
   exclude:
     - rvm: 1.9.3
       env: PUPPET_GEM_VERSION="~> 2.7.0"
       gemfile: .travis/Gemfile
+    # No support for Ruby 2.0 before Puppet 3.2
     - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-      gemfile: .travis/Gemfile
+      env: PUPPET_VERSION="~> 2.7.0"
+    - rvm: 2.0.0
+      env: PUPPET_VERSION="~> 3.0.0"
+    - rvm: 2.0.0
+      env: PUPPET_VERSION="~> 3.1.0"
 notifications:
   email: false
