--- a/.travis/Gemfile
+++ b/.travis/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 group :rake do
   gem 'puppetlabs_spec_helper'
-  gem 'librarian-puppet-maestrodev'
+  gem 'librarian-puppet'
   gem 'open3_backport', :platforms => :ruby_18
   gem 'json',           :platforms => :ruby_18
 end
