--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ branches:
   - refactor
   - gh-pages
 language: ruby
-script: "bundle exec rake --rakefile $PWD/.travis/Rakefile spec SPEC_OPTS='--format documentation'"
+script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
+bundler_args: --without rake
 rvm:
   - 1.9.3
   - 2.0.0
-gemfile: .travis/Gemfile
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
@@ -17,9 +17,7 @@ matrix:
   exclude:
     - rvm: 1.9.3
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-      gemfile: .travis/Gemfile
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-      gemfile: .travis/Gemfile
 notifications:
   email: false  
