--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,23 @@ branches:
 language: ruby
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
 bundler_args: --without rake
-rvm:
-  - 1.9.3
-  - 2.0.0
-env:
-  matrix:
-    - PUPPET_GEM_VERSION="~> 2.7.0"
-    - PUPPET_GEM_VERSION="~> 3.0"
 matrix:
-  exclude:
+  fast_finish: true
+  include:
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 3.0"
     - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+      env: PUPPET_GEM_VERSION="~> 3.0"
     - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 3.0"
+    - rvm: 2.1.0
+      env: PUPPET_GEM_VERSION="~> 3.0"
+  allow_failures:
+    - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 3.0"
 notifications:
   email: false  
