--- a/data/hiera.yaml
+++ b/data/hiera.yaml
@@ -1,6 +1,6 @@
 ---
 :hierarchy:
-  - %{::osfamily}
-  - %{::kernelversion}
-  - %{::kernel}
+  - "%{::osfamily}"
+  - "%{::kernelversion}"
+  - "%{::kernel}"
   - common
