--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,3 +5,4 @@ fixtures:
     apt: "puppetlabs/apt"
     concat: "puppetlabs/concat"
     stdlib: "puppetlabs/stdlib"
+    module_data: "ripienaar/module_data"
