remove kernelversion/add osmajrelease

--- a/data/hiera.yaml
+++ b/data/hiera.yaml
@@ -1,6 +1,7 @@
 ---
 :hierarchy:
+- operatingsystem/%{::operatingsystem}/%{::operatingsystemmajrelease}
+- operatingsystem/%{::operatingsystem}
 - osfamily/%{::osfamily}
-- kernelversion/%{::kernelversion}
 - kernel/%{::kernel}
 - common
