Allow multiple proxy_cache_paths and allow users to be more specific.
In the past the module has only allowed for one proxy_cache_path to be
set. I might have a use case coming up where I will need a few caches
with different requirements so I wanted to be able to define both of
those within puppet. Another thing about breaking this into a hash
instead of using settings for each option is that now the user can
define the minimum options which are path and keys_zone as defined in
the docs [1].

The only thing I can think that this is missing is if we'd want the
option to be called proxy_cache_path still as then its a 1 to 1 matching
to the option within nginx. I only changed it because it does allow a
hash now and is a collection of proxy_caches. I can easily change this
back and make a new PR if that's what we want to go with.

[1] http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_cache_path

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -27,11 +27,7 @@ nginx::config::proxy_set_header:
   - 'Host $host'
   - 'X-Real-IP $remote_addr'
   - 'X-Forwarded-For $proxy_add_x_forwarded_for'
-nginx::config::proxy_cache_path: false
-nginx::config::proxy_cache_levels: '1'
-nginx::config::proxy_cache_keys_zone: 'd2:100m'
-nginx::config::proxy_cache_max_size: 500m
-nginx::config::proxy_cache_inactive: 20m
+nginx::config::proxy_cache: false
 nginx::config::fastcgi_cache_path: false
 nginx::config::fastcgi_cache_levels: '1'
 nginx::config::fastcgi_cache_keys_zone: 'd3:100m'
