--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
+  repositories:
+    apt: "git://github.com/puppetlabs/puppetlabs-apt.git"
+    concat: "git://github.com/puppetlabs/puppetlabs-concat.git"
+    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
     nginx: "#{source_dir}"
-  forge_modules:
-    apt: "puppetlabs/apt"
-    concat: "puppetlabs/concat"
-    stdlib: "puppetlabs/stdlib"
