--- a/.travis.yml
+++ b/.travis.yml
@@ -15,20 +15,20 @@ script:
 matrix:
   fast_finish: true
   include:
-  - rvm: 1.9.3
-    env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" CHECK=test
-  - rvm: 1.9.3
-    env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" FUTURE_PARSER="yes" CHECK=test
-  - rvm: 2.1.9
-    env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" CHECK=test
-  - rvm: 2.1.9
-    env: PUPPET_VERSION="~> 4.0" CHECK=test
-  - rvm: 2.2.5
-    env: PUPPET_VERSION="~> 4.0" CHECK=test
-  - rvm: 2.3.1
-    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
-  - rvm: 2.3.1
-    env: PUPPET_VERSION="~> 4.0" CHECK=rubocop
+  # - rvm: 1.9.3
+  #   env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" CHECK=test
+  # - rvm: 1.9.3
+  #   env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" FUTURE_PARSER="yes" CHECK=test
+  # - rvm: 2.1.9
+  #   env: PUPPET_VERSION="~> 3.0" STRICT_VARIABLES="yes" CHECK=test
+  # - rvm: 2.1.9
+  #   env: PUPPET_VERSION="~> 4.0" CHECK=test
+  # - rvm: 2.2.5
+  #   env: PUPPET_VERSION="~> 4.0" CHECK=test
+  # - rvm: 2.3.1
+  #   env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
+  # - rvm: 2.3.1
+  #   env: PUPPET_VERSION="~> 4.0" CHECK=rubocop
   - rvm: 2.3.1
     env: PUPPET_VERSION="~> 4.0" CHECK=test
   - rvm: 2.4.0-preview1
