--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
   repositories:
-    apt: "git://github.com/puppetlabs/puppetlabs-apt.git"
-    concat: "git://github.com/puppetlabs/puppetlabs-concat.git"
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+    apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
+    concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
+    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
     nginx: "#{source_dir}"
