--- a/.travis.yml
+++ b/.travis.yml
@@ -15,29 +15,29 @@ script:
 matrix:
   fast_finish: true
   include:
-  - rvm: 2.4.1
-    bundler_args: --without development
+  - rvm: 2.4.2
+    bundler_args: --without development release
     dist: trusty
     env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04 CHECK=beaker
     services: docker
     sudo: required
-  - rvm: 2.4.1
-    bundler_args: --without development
+  - rvm: 2.4.2
+    bundler_args: --without development release
     dist: trusty
     env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/centos-7 CHECK=beaker
     services: docker
     sudo: required
   - rvm: 2.1.9
-    bundler_args: --without system_tests development
+    bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 4.0" CHECK=test
-  - rvm: 2.4.1
-    bundler_args: --without system_tests development
-    env: PUPPET_VERSION="~> 5.0" CHECK=test
-  - rvm: 2.4.1
-    bundler_args: --without system_tests development
+  - rvm: 2.4.2
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 5.0" CHECK=test_with_coveralls
+  - rvm: 2.4.2
+    bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 5.0" CHECK=rubocop
-  - rvm: 2.4.1
-    bundler_args: --without system_tests development
+  - rvm: 2.4.2
+    bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 5.0" CHECK=build DEPLOY_TO_FORGE=yes
 branches:
   only:
@@ -45,6 +45,11 @@ branches:
   - /^v\d/
 notifications:
   email: false
+  irc:
+    on_success: change
+    on_failure: always
+    channels:
+      - "chat.freenode.org#voxpupuli-notifications"
 deploy:
   provider: puppetforge
   user: puppet
