--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ branches:
 notifications:
   email: false
   irc:
-    on_success: change
+    on_success: always
     on_failure: always
     channels:
       - "chat.freenode.org#voxpupuli-notifications"
