add debian8 acceptance tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,12 @@ matrix:
     env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/centos-7 CHECK=beaker
     services: docker
     sudo: required
+  - rvm: 2.4.3
+    bundler_args: --without development release
+    dist: trusty
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/debian-8 CHECK=beaker
+    services: docker
+    sudo: required
 branches:
   only:
   - master
