--- a/.sync.yml
+++ b/.sync.yml
@@ -5,5 +5,6 @@
   - set: docker/ubuntu-14.04
   - set: docker/ubuntu-16.04
   - set: docker/centos-7
+  - set: docker/debian-8
 spec/spec_helper.rb:
   mock_with: ':rspec'
