--- a/.sync.yml
+++ b/.sync.yml
@@ -6,5 +6,6 @@
   - set: docker/ubuntu-16.04
   - set: docker/centos-7
   - set: docker/debian-8
+  - set: docker/debian-9
 spec/spec_helper.rb:
   mock_with: ':rspec'
