--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ sudo: false
 dist: trusty
 language: ruby
 cache: bundler
+# related to https://github.com/rubygems/rubygems/issues/2123
 before_install:
-  - rm -f Gemfile.lock
+  - 'rm -f Gemfile.lock'
+  - 'gem update --system'
+  - 'gem install bundler'
 script:
   - 'bundle exec rake $CHECK'
 matrix:
@@ -13,46 +16,46 @@ matrix:
   - rvm: 2.1.9
     bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 4.0" CHECK=test PARALLEL_TEST_PROCESSORS=12
-  - rvm: 2.4.3
+  - rvm: 2.4.4
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 5.0" CHECK=test
+  - rvm: 2.5.1
     bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 5.0" CHECK=test_with_coveralls
-  - rvm: 2.5.0
-    bundler_args: --without system_tests development release
-    env: PUPPET_VERSION="~> 5.0" CHECK=test_with_coveralls
-  - rvm: 2.4.3
+  - rvm: 2.4.4
     bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 5.0" CHECK=rubocop
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without system_tests development release
     env: PUPPET_VERSION="~> 5.0" CHECK=build DEPLOY_TO_FORGE=yes
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without development release
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04 CHECK=beaker
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_setfile=ubuntu1404-64{hypervisor=docker} CHECK=beaker
     services: docker
     sudo: required
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without development release
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04 CHECK=beaker
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_setfile=ubuntu1604-64{hypervisor=docker} CHECK=beaker
     services: docker
     sudo: required
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without development release
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/centos-7 CHECK=beaker
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_setfile=centos7-64{hypervisor=docker} CHECK=beaker
     services: docker
     sudo: required
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without development release
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/debian-8 CHECK=beaker
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_setfile=debian8-64{hypervisor=docker} CHECK=beaker
     services: docker
     sudo: required
-  - rvm: 2.4.3
+  - rvm: 2.5.1
     bundler_args: --without development release
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/debian-9 CHECK=beaker
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_setfile=debian9-64{hypervisor=docker} CHECK=beaker
     services: docker
     sudo: required
 branches:
