add ubuntu1804 as supported OS

--- a/.sync.yml
+++ b/.sync.yml
@@ -4,6 +4,7 @@
   docker_sets:
   - set: ubuntu1404-64
   - set: ubuntu1604-64
+  - set: ubuntu1804-64
   - set: centos7-64
   - set: debian8-64
   - set: debian9-64
