cleanup .fixtures.yml

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,4 @@ fixtures:
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
     concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
     stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
-    yumrepo_core:
-      repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
-      puppet_version: ">= 6.0.0"
+    yumrepo_core: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
