--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
     uses: voxpupuli/gha-puppet/.github/workflows/beaker.yml@v1
     with:
       pidfile_workaround: 'false'
-      unit_runs_on: ['self-hosted','cern-self-hosted']
+      unit_runs_on: 'self-hosted'
